<resources>
    <string name="app_name">Audio Player</string>

    <!-- -->
    <string name="audio_play_list">播放列表</string>
    <string name="audio_play_lyrics">歌词显示</string>
    <string name="audio_play_settings">音乐设置</string>

    <!-- 控制面板显示的文字 -->
    <string name="audio_display_name">歌名</string>
    <string name="audio_singer_name">歌手</string>
    <string name="audio_start_time_text">00:00</string>
    <string name="audio_total_time_text">03:00</string>

    <!-- -->
    <string name="audio_order_id_text">001</string>
    <string name="audio_info_text">歌手|专辑</string>
    <string name="audio_time_text">00:00</string>

    <string name="audio_lyric_text">词</string>

    <string name="audio_play_order_default">顺序</string>

    <string name="audio_play_order_one">单曲循环</string>
    <string name="audio_play_order_two">顺序播放</string>
    <string name="audio_play_order_three">随机播放</string>

    <string name="window_lyric_text">欢迎使用桌面歌词</string>

    <string name="setting_exit_text">退出应用时关闭播放器</string>
    <string name="setting_exit_yes_text">是</string>
    <string name="setting_exit_no_text">否</string>

</resources>
