<?xml version="1.0" encoding="utf-8"?>
<com.hxiong.audioplayer.widget.SpreadLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

     <ImageView
         android:id="@+id/audio_state_image"
         android:layout_width="@dimen/audio_id_icon_width"
         android:layout_height="@dimen/audio_id_icon_height"
         android:layout_margin="@dimen/audio_id_icon_margin"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:visibility="gone"
         android:background="@mipmap/audio_state_play"/>
     <TextView
         android:id="@+id/audio_id_text"
         android:layout_width="@dimen/audio_id_icon_width"
         android:layout_height="@dimen/audio_id_icon_height"
         android:layout_margin="@dimen/audio_id_icon_margin"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:gravity="center"
         android:textSize="@dimen/audio_id_text_size"
         android:textColor="@color/audio_id_text_color"
         android:text="@string/audio_order_id_text"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/audio_item_margin_left"
        android:orientation="vertical">
        <TextView
            android:id="@+id/audio_item_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audio_item_margin"
            android:textSize="@dimen/audio_item_name_text_size"
            android:lines="1"
            android:ellipsize="end"
            android:textColor="@color/audio_item_name_text_color"
            android:text="@string/audio_display_name"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audio_item_margin"
            android:layout_marginBottom="@dimen/audio_item_margin">
            <TextView
                android:id="@+id/audio_item_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/audio_item_margin_right"
                android:lines="1"
                android:ellipsize="end"
                android:layout_toLeftOf="@+id/audio_item_time_text"
                android:textSize="@dimen/audio_item_text_size"
                android:textColor="@color/audio_item_text_color"
                android:text="@string/audio_info_text"/>
            <TextView
                android:id="@+id/audio_item_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/audio_item_margin_right"
                android:textSize="@dimen/audio_item_text_size"
                android:textColor="@color/audio_item_text_color"
                android:text="@string/audio_time_text"/>
        </RelativeLayout>
    </LinearLayout>
</com.hxiong.audioplayer.widget.SpreadLayout>
