<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/audio_notify_padding">
           <LinearLayout
               android:id="@+id/audio_notify_control"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentRight="true"
               android:layout_centerVertical="true"
               android:orientation="horizontal">
               <ImageView
                   android:id="@+id/audio_notify_control_play"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_marginRight="@dimen/audio_notify_margin"
                   android:background="@drawable/notify_button_selector"
                   android:src="@mipmap/audio_btn_stop"/>
               <ImageView
                   android:id="@+id/audio_notify_control_next"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_marginRight="@dimen/audio_notify_margin"
                   android:background="@drawable/notify_button_selector"
                   android:src="@mipmap/audio_btn_next"/>
               <TextView
                   android:id="@+id/audio_notify_control_lyric"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_marginRight="@dimen/audio_notify_margin"
                   android:background="@drawable/notify_button_selector"
                   android:textSize="@dimen/notify_lyric_text_size"
                   android:textColor="@color/notify_btn_lyric_color"
                   android:padding="@dimen/audio_notify_padding"
                   android:text="@string/audio_lyric_text"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toLeftOf="@id/audio_notify_control"
               android:layout_marginLeft="@dimen/audio_notify_margin"
               android:layout_marginRight="@dimen/audio_notify_margin"
               android:layout_centerVertical="true"
               android:orientation="vertical">
               <TextView
                   android:id="@+id/audio_notify_control_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:lines="1"
                   android:ellipsize="end"
                   android:textSize="@dimen/notify_title_text_size"
                   android:textColor="@color/notify_audio_title_color"
                   android:text="@string/audio_display_name"/>
               <TextView
                   android:id="@+id/audio_notify_control_singer"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:lines="1"
                   android:ellipsize="end"
                   android:textSize="@dimen/notify_singer_text_size"
                   android:textColor="@color/notify_audio_singer_color"
                   android:text="@string/audio_singer_name"/>
           </LinearLayout>
</RelativeLayout>
